# mia-lib

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  main.cpp
include/: utilities.hpp
include/arena/: arena.h  arena.hpp
include/math/: math-utilities.hpp  matrix.hpp  utilities.hpp  vector.hpp
include/math/internal/: vector2.hpp  vector3.hpp  vector4.hpp
test/: CMakeLists.txt  arena-test.cpp  utilities-test.cpp
test/arena/: arena-test.cpp
test/math/: math-utilities-test.cpp  vector-test.cpp
test/utilities/: utilities-test.cpp
